update with latet locales from crowdin

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -41,8 +41,8 @@
   "view": "Ver",
   "youLeftTheGroup": "Has abandonado el grupo.",
   "youGotKickedFromGroup": "Has sido eliminado del grupo.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessage": "Mensaje Sin Leer",
+  "unreadMessages": "Mensajes Sin Leer",
   "debugLogExplanation": "Este registro se publicará on line para que los colaboradores tengan acceso. Puedes examinarlo y editarlo antes de enviarlo.",
   "debugLogError": "Se ha producido un fallo al adjuntar el archivo con el registro de depuración. Considera añadir el archivo manualmente al enviar el informe del fallo. ",
   "reportIssue": "Informar de un problema",
@@ -255,8 +255,8 @@
   "userUnbanFailed": "¡Error al desbloquear!",
   "banUser": "Bloquear usuario",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "Banear y Eliminar Todo",
+  "banUserAndDeleteAllConfirm": "¿Estás seguro de que quieres banear al usuario y eliminar todos sus mensajes?",
   "userBanned": "User banned successfully",
   "userBanFailed": "¡Bloqueo fallido!",
   "leaveGroup": "Abandonar Grupo",
@@ -283,16 +283,16 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
+  "pasteLongPasswordToastTitle": "El contenido del portapapeles excede la longitud máxima de la contraseña de $max_pwd_len$ caracteres.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Tu frase de recuperación es la llave maestra de tu ID de Session, puedes usarla para recuperar tu ID de Session en caso de pérdida de acceso a tu dispositivo. Guarda tu frase de recuperación en un lugar seguro y no se la digas a nadie.",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "Copiado en el portapapeles",
   "passwordViewTitle": "Type In Your Password",
   "unlock": "Desbloquear",
-  "password": "Password",
+  "password": "Contraseña",
   "setPassword": "Set Password",
-  "changePassword": "Change Password",
+  "changePassword": "Cambiar Contraseña",
   "removePassword": "Remove Password",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
   "typeInOldPassword": "Please type in your old password",
@@ -312,7 +312,7 @@
   "publicChatExists": "You are already connected to this open group",
   "connectToServerFail": "No te pudiste unir al grupo",
   "connectingToServer": "Conectando ...",
-  "connectToServerSuccess": "Successfully connected to open group",
+  "connectToServerSuccess": "Conectado con exito al grupo abierto",
   "setPasswordFail": "Failed to set password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
   "passwordTypeError": "Password must be a string",
@@ -321,20 +321,20 @@
   "invalidSessionId": "ID de Session no válida",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "Por favor, ingresa un nombre de grupo",
-  "editProfileModalTitle": "Profile",
+  "editProfileModalTitle": "Perfil",
   "groupNamePlaceholder": "Nombre Del Grupo",
   "inviteContacts": "Invitar Amigos",
-  "addModerators": "Add Moderators",
-  "removeModerators": "Remove Moderators",
+  "addModerators": "Añadir Moderadores",
+  "removeModerators": "Eliminar Moderadores",
   "addAsModerator": "Add As Moderator",
-  "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
-  "addingContacts": "Adding contacts to",
-  "noContactsToAdd": "No contacts to add",
+  "removeFromModerators": "Eliminar De Moderadores",
+  "add": "Añadir",
+  "addingContacts": "Añadiendo contactos a",
+  "noContactsToAdd": "No hay contactos para añadir",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
-  "onlyAdminCanRemoveMembers": "You are not the creator",
-  "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
+  "onlyAdminCanRemoveMembers": "Tu no eres el creador",
+  "onlyAdminCanRemoveMembersDesc": "Sólo el creador del grupo puede eliminar usuarios",
   "createAccount": "Create Account",
   "signIn": "Iniciar sesión",
   "yourUniqueSessionID": "Saluda a tu ID de Session",
@@ -418,6 +418,6 @@
   "pinConversationLimitToastDescription": "Solo puedes anclar $number$ conversaciones",
   "latestUnreadIsAbove": "El primer mensaje no leído está arriba",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
-  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "notificationSubtitle": "Notifications - $setting$"
+  "sendRecoveryPhraseMessage": "Estás intentando enviar tu frase de recuperación, que puede utilizarse para acceder a tu cuenta. ¿Estás seguro de que deseas enviar este mensaje?",
+  "notificationSubtitle": "Notificaciones - $setting$"
 }
