--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -140,7 +140,7 @@
   "imageCaptionIconAlt": "Icône qui indique que cette image a une légende",
   "addACaption": "Ajouter un légende…",
   "copy": "Copier",
-  "copySessionID": "Copier le Session ID",
+  "copySessionID": "Copier la Session ID",
   "copyOpenGroupURL": "Copier l'URL de Group",
   "save": "Enregistrer",
   "saved": "Enregistré",
@@ -255,8 +255,8 @@
   "userUnbanFailed": "Le débannissement a échoué !",
   "banUser": "Bannir l'utilisateur",
   "banUserConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur ?",
-  "banUserAndDeleteAll": "Bannir et tout supprimer",
-  "banUserAndDeleteAllConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur et supprimer tous ses messages ?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "Utilisateur banni",
   "userBanFailed": "Le bannissement a échoué",
   "leaveGroup": "Quitter le groupe",
@@ -356,7 +356,7 @@
   "beginYourSession": "Commencez<br />votre<br />Session.",
   "welcomeToYourSession": "Bienvenue sur Session",
   "newSession": "Nouvelle Session",
-  "searchFor...": "Chercher des conversations, des contacts ou des messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Saisir un Session ID",
   "enterSessionIDOfRecipient": "Saisissez le Session ID du destinataire",
   "usersCanShareTheir...": "Les utilisateurs peuvent partager leur Session ID depuis les paramètres du compte ou en utilisant le code QR.",
