--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -41,8 +41,8 @@
   "view": "Megtekintés",
   "youLeftTheGroup": "Kiléptél a csoportból",
   "youGotKickedFromGroup": "Ön ki lett dobva ebből a csoportból.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessage": "Olvasatlan Üzenet",
+  "unreadMessages": "Olvasatlan Üzenetek",
   "debugLogExplanation": "Ez a naplófájl nyilvánosan elérhető lesz az interneten annak érdekében, hogy a fejlesztők megtekinthessék. A tartalmát feltöltés előtt ellenőrizheted és szabadon szerkesztheted.",
   "debugLogError": "Valamiért nem sikerült a feltöltés! Kérjük vedd fontolóra a naplófájl kézi feltöltését a hiba bejelentése során.",
   "reportIssue": "Hiba bejelentése",
@@ -286,25 +286,25 @@
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
-  "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
+  "invalidOpenGroupUrl": "Érvénytelen URL",
+  "copiedToClipboard": "Vágólapra másolva",
   "passwordViewTitle": "Type In Your Password",
-  "unlock": "Unlock",
-  "password": "Password",
-  "setPassword": "Set Password",
-  "changePassword": "Change Password",
-  "removePassword": "Remove Password",
+  "unlock": "Feloldás",
+  "password": "Jelszó",
+  "setPassword": "Jelszó beállítása",
+  "changePassword": "Jelszó módosítása",
+  "removePassword": "Jelszó eltávolítása",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
-  "typeInOldPassword": "Please type in your old password",
-  "invalidOldPassword": "Old password is invalid",
-  "invalidPassword": "Invalid password",
-  "noGivenPassword": "Please enter your password",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "setPasswordInvalid": "Passwords do not match",
-  "changePasswordInvalid": "The old password you entered is incorrect",
-  "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
+  "typeInOldPassword": "Kérjük adja meg a régi jelszavát",
+  "invalidOldPassword": "A régi jelszó érvénytelen",
+  "invalidPassword": "Érvénytelen jelszó",
+  "noGivenPassword": "Kérjük adja meg a jelszavát",
+  "passwordsDoNotMatch": "A megadott jelszavak nem egyeznek",
+  "setPasswordInvalid": "A megadott jelszavak nem egyeznek",
+  "changePasswordInvalid": "A megadott régi jelszó helytelen",
+  "removePasswordInvalid": "Hibás jelszó",
+  "setPasswordTitle": "Jelszó beállítása",
+  "changePasswordTitle": "A jelszó módosult",
   "removePasswordTitle": "Removed Password",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
