--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,19 +1,19 @@
 {
-  "privacyPolicy": "Regulamin & Polityka prywatności",
+  "privacyPolicy": "Regulamin i Polityka prywatności",
   "copyErrorAndQuit": "Skopiuj błąd i zakończ",
   "unknown": "Nieznany",
   "databaseError": "Błąd bazy danych",
   "mainMenuFile": "&Plik",
-  "mainMenuEdit": "&Edytuj",
-  "mainMenuView": "&Zobacz",
+  "mainMenuEdit": "&Edycja",
+  "mainMenuView": "&Widok",
   "mainMenuWindow": "&Okno",
   "mainMenuHelp": "&Pomoc",
   "appMenuHide": "Ukryj",
   "appMenuHideOthers": "Ukryj pozostałe",
   "appMenuUnhide": "Pokaż wszystko",
-  "appMenuQuit": "Zamknij",
+  "appMenuQuit": "Zamknij Session",
   "editMenuUndo": "Cofnij",
-  "editMenuRedo": "Przywróć",
+  "editMenuRedo": "Ponów",
   "editMenuCut": "Wytnij",
   "editMenuCopy": "Kopiuj",
   "editMenuPaste": "Wklej",
@@ -25,8 +25,8 @@
   "windowMenuZoom": "Powiększ",
   "windowMenuBringAllToFront": "Przenieś wszystko na wierzch",
   "viewMenuResetZoom": "Domyślny rozmiar",
-  "viewMenuZoomIn": "Powiększ",
-  "viewMenuZoomOut": "Pomniejsz",
+  "viewMenuZoomIn": "Przybliż",
+  "viewMenuZoomOut": "Oddal",
   "viewMenuToggleFullScreen": "Pełny ekran",
   "viewMenuToggleDevTools": "Narzędzia dla programistów",
   "contextMenuNoSuggestions": "Brak Sugestii",
@@ -255,8 +255,8 @@
   "userUnbanFailed": "Odbanowanie nie powiodło się!",
   "banUser": "Zbanuj użytkownika",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "Zbanuj i usuń wszystko",
+  "banUserAndDeleteAllConfirm": "Czy na pewno chcesz zbanować użytkownika i usunąć wszystkie jego wiadomości?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban nieudany!",
   "leaveGroup": "Opuść grupę",
@@ -356,7 +356,7 @@
   "beginYourSession": "Rozpocznij<br />swój<br />Session.",
   "welcomeToYourSession": "Witamy w twoim Session",
   "newSession": "Nowa Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Szukaj konwersacji lub kontaktów",
   "enterSessionID": "Wpisz identyfikator Session",
   "enterSessionIDOfRecipient": "Wprowadź identyfikator Session odbiorcy",
   "usersCanShareTheir...": "Użytkownicy mogą udostępnić swój identyfikator Session, przechodząc do ustawień konta i stukając opcję Udostępnij identyfikator Session lub udostępniając kod QR.",
@@ -399,7 +399,7 @@
   "notificationForConvo_disabled": "Wyłączone",
   "notificationForConvo_mentions_only": "Tylko wzmianki",
   "onionPathIndicatorTitle": "Ścieżka",
-  "onionPathIndicatorDescription": "Sesja ukrywa Twój adres IP, odbijając wiadomości przez kilka węzłów usług w zdecentralizowanej sieci Session. Oto kraje, w których obecnie Twoje połączenie jest odbijane:",
+  "onionPathIndicatorDescription": "Session ukrywa Twój adres IP, odbijając wiadomości przez kilka węzłów usług w zdecentralizowanej sieci Session. Oto kraje, w których obecnie Twoje połączenie jest odbijane:",
   "unknownCountry": "Nieznany kraj",
   "device": "Urządzenie",
   "destination": "Miejsce docelowe",
@@ -419,5 +419,5 @@
   "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Powiadomienia - $setting$"
 }
