--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1,7 +1,7 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Vilkor och sekretesspolicy",
   "copyErrorAndQuit": "Kopiera felmeddelande och avsluta",
-  "unknown": "Unknown",
+  "unknown": "Okänd",
   "databaseError": "Databasfel",
   "mainMenuFile": "&Arkiv",
   "mainMenuEdit": "&Redigera",
@@ -29,26 +29,26 @@
   "viewMenuZoomOut": "Zooma ut",
   "viewMenuToggleFullScreen": "Slå av/på fullskärm",
   "viewMenuToggleDevTools": "Slå på utvecklingsverktyg",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "contextMenuNoSuggestions": "Inga förslag",
+  "openGroupInvitation": "Öppen gruppinbjudan",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Gå med i $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Är du säker på att du vill gå med i $roomName$s öppna grupp?",
+  "enterSessionIDOrONSName": "Ange sessions-ID eller ONS-namn",
   "loading": "Läser in...",
   "optimizingApplication": "Optimerar applikationen...",
-  "done": "Done",
+  "done": "Slutfört",
   "me": "Jag",
   "view": "Visa",
   "youLeftTheGroup": "Du lämnade gruppen",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "Du togs bort från gruppen.",
+  "unreadMessage": "Olästa meddelande",
+  "unreadMessages": "Olästa meddelanden",
   "debugLogExplanation": "Den här loggen kommer att bli postad publikt på internet så att våra medarbetare kan kolla igenom den. Du kan gå igenom och ändra på den innan du skickar in den.",
   "debugLogError": "Något gick fel med sändningen! Vänligen överväg att manuellt lägga till loggen till rapporten du skriver.",
   "reportIssue": "Anmäl ett programfel",
   "gotIt": "Uppfattat!",
   "submit": "Skicka",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Markera alla som lästa",
   "incomingError": "Fel med att hantera inkommande meddelande",
   "media": "Media",
   "mediaEmptyState": "Du har inga mediefiler i denna konversation",
@@ -76,7 +76,7 @@
   "goToReleaseNotes": "Gå till versionsanteckningar",
   "goToSupportPage": "Gå till supportsidan",
   "menuReportIssue": "Rapportera ett fel",
-  "about": "About",
+  "about": "Om",
   "speech": "Tal",
   "show": "Visa",
   "sessionMessenger": "Session",
@@ -85,16 +85,16 @@
   "conversationsHeader": "Konversationer",
   "contactsHeader": "Kontakter",
   "messagesHeader": "Meddelanden",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Inställningar",
   "typingAlt": "Skrivanimation för denna konversation",
   "contactAvatarAlt": "Avatar för kontakten $name$",
   "downloadAttachment": "Hämta bifogad fil",
   "replyToMessage": "Svara på meddelande",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Svarar på:",
   "originalMessageNotFound": "Originalmeddelande hittades inte",
   "originalMessageNotAvailable": "Originalmeddelande inte längre tillgängligt",
   "messageFoundButNotLoaded": "Originalmeddelande hittades, men lästes inte in. Skrolla upp för att läsa in det.",
-  "recording": "Recording",
+  "recording": "Spelar in ",
   "you": "Du",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Om du vill skicka röstmeddelanden måste Session Desktop ha tillgång till din mikrofon.",
