--- a/_locales/es_419/messages.json
+++ b/_locales/es_419/messages.json
@@ -1,7 +1,7 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Términos y Política de Privacidad",
   "copyErrorAndQuit": "Copy error and quit",
-  "unknown": "Unknown",
+  "unknown": "Desconocido",
   "databaseError": "Database Error",
   "mainMenuFile": "&File",
   "mainMenuEdit": "&Edit",
@@ -12,14 +12,14 @@
   "appMenuHideOthers": "Hide Others",
   "appMenuUnhide": "Show All",
   "appMenuQuit": "Quit Session",
-  "editMenuUndo": "Undo",
+  "editMenuUndo": "Deshacer",
   "editMenuRedo": "Redo",
-  "editMenuCut": "Cut",
-  "editMenuCopy": "Copy",
-  "editMenuPaste": "Paste",
+  "editMenuCut": "Cortar",
+  "editMenuCopy": "Copiar",
+  "editMenuPaste": "Pegar",
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
   "editMenuDelete": "Delete",
-  "editMenuSelectAll": "Select all",
+  "editMenuSelectAll": "Seleccionar todo",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
@@ -34,7 +34,7 @@
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
-  "loading": "Loading...",
+  "loading": "Cargando...",
   "optimizingApplication": "Optimizing application...",
   "done": "Done",
   "me": "Me",
@@ -95,18 +95,18 @@
   "originalMessageNotAvailable": "Original message no longer available",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
   "recording": "Recording",
-  "you": "You",
+  "you": "Tú",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
   "audio": "Audio",
   "video": "Video",
-  "photo": "Photo",
+  "photo": "Foto",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "OK",
-  "cancel": "Cancel",
+  "cancel": "Cancelar",
   "close": "Close",
-  "continue": "Continue",
+  "continue": "Continuar",
   "error": "Error",
   "delete": "Delete",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
@@ -118,7 +118,7 @@
   "deleted": "Deleted",
   "from": "From:",
   "to": "To:",
-  "sent": "Sent",
+  "sent": "Enviado",
   "received": "Received",
   "sendMessage": "Message",
   "groupMembers": "Group members",
@@ -142,7 +142,7 @@
   "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
-  "save": "Save",
+  "save": "Guardar",
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "General",
@@ -176,9 +176,9 @@
   "expiredWarning": "This version of Session has expired. Please upgrade to the latest version to continue messaging.",
   "upgrade": "Upgrade",
   "mediaMessage": "Media message",
-  "timestamp_s": "Now",
-  "timestamp_m": "1 minute",
-  "timestamp_h": "1 hour",
+  "timestamp_s": "Ahora",
+  "timestamp_m": "1 minuto",
+  "timestamp_h": "1 hora",
   "timestampFormat_M": "MMM D",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Unblock this contact to send a message.",
@@ -187,17 +187,17 @@
   "timerSetOnSync": "Updated disappearing message timer to $time$",
   "theyChangedTheTimer": "$name$ set the disappearing message timer to $time$",
   "timerOption_0_seconds": "Off",
-  "timerOption_5_seconds": "5 seconds",
-  "timerOption_10_seconds": "10 seconds",
-  "timerOption_30_seconds": "30 seconds",
-  "timerOption_1_minute": "1 minute",
-  "timerOption_5_minutes": "5 minutes",
-  "timerOption_30_minutes": "30 minutes",
-  "timerOption_1_hour": "1 hour",
-  "timerOption_6_hours": "6 hours",
-  "timerOption_12_hours": "12 hours",
-  "timerOption_1_day": "1 day",
-  "timerOption_1_week": "1 week",
+  "timerOption_5_seconds": "5 segundos",
+  "timerOption_10_seconds": "10 segundos",
+  "timerOption_30_seconds": "30 segundos",
+  "timerOption_1_minute": "1 minuto",
+  "timerOption_5_minutes": "5 minutos",
+  "timerOption_30_minutes": "30 minutos",
+  "timerOption_1_hour": "1 hora",
+  "timerOption_6_hours": "6 horas",
+  "timerOption_12_hours": "12 horas",
+  "timerOption_1_day": "1 día",
+  "timerOption_1_week": "1 semana",
   "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
@@ -233,7 +233,7 @@
   "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
   "autoUpdateRestartButtonLabel": "Restart Session",
   "autoUpdateLaterButtonLabel": "Later",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "Descargar",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
   "autoUpdateDownloadInstructions": "Would you like to download the update?",
   "leftTheGroup": "$name$ has left the group.",
@@ -274,7 +274,7 @@
   "editGroupName": "Edit group name",
   "updateGroupDialogTitle": "Updating $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
-  "yourSessionID": "Your Session ID",
+  "yourSessionID": "Tu ID de Session",
   "setAccountPasswordTitle": "Set Account Password",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
   "changeAccountPasswordTitle": "Change Account Password",
@@ -344,7 +344,7 @@
   "recoveryPhrase": "Recovery Phrase",
   "enterRecoveryPhrase": "Enter your recovery phrase",
   "displayName": "Display Name",
-  "anonymous": "Anonymous",
+  "anonymous": "Anónimo",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
   "enterOptionalPassword": "Enter password (optional)",
