--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -199,7 +199,7 @@
   "timerOption_1_day": "1 روز",
   "timerOption_1_week": "1 هفته",
   "disappearingMessages": "پیام‌های نابود شونده",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "تغییر نام کاربری",
   "clearNickname": "پاک کردن نام مستعار",
   "nicknamePlaceholder": "نام مستعار جدید",
   "changeNicknameMessage": "Enter a nickname for this user",
@@ -219,7 +219,7 @@
   "disabledDisappearingMessages": "$name$ پیام های نابود شونده را غیر فعال کرد",
   "youDisabledDisappearingMessages": "شما پیام های نابود شونده را غیر فعال کردید",
   "timerSetTo": "تایمر روی $time$ تنظیم شد",
-  "noteToSelf": "Note to Self",
+  "noteToSelf": "یادداشت به خود",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
@@ -246,8 +246,8 @@
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
   "blockUser": "مسدود کردن",
   "unblockUser": "دفع مسدودیت",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
+  "unblocked": "رفع مسدودی",
+  "blocked": "مسدود شده",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -259,7 +259,7 @@
   "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
-  "leaveGroup": "Leave Group",
+  "leaveGroup": "ترک کردن گروه",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
@@ -277,11 +277,11 @@
   "yourSessionID": "شناسه‌ی Session شما",
   "setAccountPasswordTitle": "تنظیم رمز عبور حساب‌کاربری",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
-  "changeAccountPasswordTitle": "Change Account Password",
+  "changeAccountPasswordTitle": "تغییر رمز عبور حساب",
   "changeAccountPasswordDescription": "تغییر گذرواژه",
   "removeAccountPasswordTitle": "حذف رمز عبور حساب‌کاربری",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
+  "enterPassword": "لطفا رمزعبور خود را وارد کنید",
   "confirmPassword": "تأیید کلمه‌ی عبور",
   "pasteLongPasswordToastTitle": "محتوای موجود در کلیپ‌بورد از حد مجاز $max_pwd_len$ کاراکتر فراتر رفته.",
   "showRecoveryPhrasePasswordRequest": "لطفا رمزعبور خود را وارد کنید",
@@ -312,7 +312,7 @@
   "publicChatExists": "You are already connected to this open group",
   "connectToServerFail": "امکان پیوستن به گروه نیست",
   "connectingToServer": "در حال اتصال...",
-  "connectToServerSuccess": "Successfully connected to open group",
+  "connectToServerSuccess": "اتصال به گروه باز موفقیت آمیز بود",
   "setPasswordFail": "تنظیم رمز عبور شکست خورد",
   "passwordLengthError": "طول رمز عبور باید بین ۶ تا ۶۴ کاراکتر باشد",
   "passwordTypeError": "Password must be a string",
